syntax = "proto3";

package kamon.armeria.instrumentation.grpc;

service ArmeriaHelloService {
  rpc Hello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
